fix: disabled work wrap in buttons

--- a/src/components/common/ui/button/styles/button-style.scss
+++ b/src/components/common/ui/button/styles/button-style.scss
@@ -9,7 +9,7 @@
     transition: all 0.2s ease-in-out;
     min-width: fit-content;
     width: fit-content;
-    //white-space: nowrap;
+    white-space: nowrap;
     padding: $padding;
     gap: $gap;
 
